--- a/Web App/design.css
+++ b/Web App/design.css
@@ -4,6 +4,7 @@
   display: inline-block;
   width: 60px;
   height: 34px;
+  left : 53%;
 }
 
 /* Hide default HTML checkbox */
@@ -21,7 +22,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: #ccc;
+  background-color:   #f9f9f9;
   -webkit-transition: .4s;
   transition: .4s;
 }
@@ -33,13 +34,13 @@
   width: 26px;
   left: 4px;
   bottom: 4px;
-  background-color: white;
+  background-color: #5f6366;
   -webkit-transition: .4s;
   transition: .4s;
 }
 
 input:checked + .slider {
-  background-color: #2196F3;
+  background-color:   #2196F3;
 }
 
 input:focus + .slider {
@@ -60,3 +61,121 @@ input:checked + .slider:before {
 .slider.round:before {
   border-radius: 50%;
 }
+
+/*Button*/
+.button {
+  border: 5px solid #f9f9f9;
+  color: #f9f9f9;
+  background-image: radial-gradient(100% 176%, #253854 80%, #061922 100%);
+  padding: 15px 15px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 28px;
+  border-radius: 50%;
+  font-family: copperplate sans-serif; 
+}
+
+/* Christmas Theme */
+
+@import url('https://fonts.googleapis.com/css?family=Corben:700');
+
+h1 {
+  font-family: 'Corben', cursive;
+  font-size: 6rem;
+  color: white;
+  letter-spacing: 0.1rem;
+  text-shadow: 0px 3px 3px rgba(0, 0, 0, 0.66);
+}
+
+.hero {
+  background-image: radial-gradient(50% 176%, #253854 80%, #061922 100%);
+  // min-height: 100vh;
+  min-height: 30rem;
+  position: relative;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  
+  &__content {
+    position: relative;
+    align-self: center;
+    padding: 3rem 0;
+  }
+}
+
+.snow {
+  position: absolute;
+  min-width: 100vw;
+  min-height: 100vh;
+  height: 100%;
+  width: 100%;
+  top: 0;
+  left: 0;
+}
+
+.snow .svg {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+
+#snow-top-layer {
+  will-change: transform;
+  transform: translateY(-768px);
+  animation: fall 22.5s infinite linear;
+}
+
+#snow-bottom-layer {
+  will-change: transform;
+  transform: translateY(-768px);
+  animation: fall 45s infinite linear;
+}
+
+@keyframes fall {
+  
+  100% {
+    transform: translateY(0);
+  }
+  
+}
+
+body{
+  text-align: center !important;
+
+}
+
+div.a {
+  font-size: 150%;
+}
+
+
+div {
+    display: block;
+}
+#wrapper {
+    width: 950px;
+    height:400px;
+}
+
+#first {
+    float:left;
+    width: 33%;
+    height: 100%;
+}
+
+#second {
+    float:left;
+    width: 33%;
+    height: 100%;
+}
+
+#third {
+    float:left;
+    width: 33%;
+    height: 100%;
+}
+
+
+
